--- a/src/assets/styles/my.scss
+++ b/src/assets/styles/my.scss
@@ -85,7 +85,8 @@
                         right: 15px;
                         padding-left: 18px;
                         color: #fff;
-                        background-size: 13px;
+                        background-size: 16px;
+                        font-size: 14px;
                     }
                 }
             }
