--- a/src/assets/styles/browse-record.scss
+++ b/src/assets/styles/browse-record.scss
@@ -42,6 +42,14 @@
                                 font-size:10px;
                             }
                         }
+                        .time {
+                            color: #03a9f4;
+                            text-align: right;
+                            position: absolute;
+                            right: 10px;
+                            bottom: 30px;
+                            font-size: 16px;
+                        }
                     }
                 }
                 .browse-item:not(:first-child){
