--- a/src/assets/styles/goodsdetail.scss
+++ b/src/assets/styles/goodsdetail.scss
@@ -75,6 +75,41 @@
                     background-size: 100px 100px;
                     background-position: -50px -3px;
                 }
+                .goods-favour-active{
+                    position: absolute;
+                    right: 0;
+                    top: 12px;
+                    display: inline-block;
+                    padding-top: 22px;
+                    margin-top:0;
+                    line-height: 1em;
+                    height: 10px;
+                    width: 50px;
+                    font-size: 10px;
+                    color: #333;
+                    text-align: center;
+                }
+                .goods-favour-active:before {
+                    content: "";
+                    width: 0;
+                    display: block;
+                    border-left: 1px solid #ddd;
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                }
+                .goods-favour-active:after {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 14px;
+                    width: 22px;
+                    height: 21px;
+                    background-image: url(../images/cart_sprits_all.png);
+                    background-size: 100px 100px;
+                    background-position: -50px -24px;
+                }
             }
             .goods-desc{
                 color: #888;
@@ -184,6 +219,10 @@
                 padding-bottom:15px;
                 border-bottom:1px solid #eee;
                 margin-bottom:15px;
+            }
+            img {
+                max-width:100%;
+                display:block;
             }
         }
         .item-list{
