--- a/src/assets/styles/userInfo.scss
+++ b/src/assets/styles/userInfo.scss
@@ -21,3 +21,60 @@
         }
     }
 }
+
+.green-circle {
+    width: 100px;
+    height: 100px;
+    margin: 10px auto 25px auto;
+}
+.success-pay-text {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.success-pay-extra {
+    font-size: 14px;
+    text-align: center;
+    padding: 0 20px;
+    color: #999;
+}
+.no-data {
+    font-size: 16px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.user-info-main {
+    width: 98%;
+    margin: 0 auto;
+    .prod-item {
+        display: flex;
+        height: 100px;
+        border: 1px solid #ccc;
+        margin-bottom: 5px;
+        background-color: #efefef;
+        .left {
+            width: 80px;
+            overflow: hidden;
+            img {
+                width: 50px;
+            }
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .right {
+            display: flex;
+            .desc {
+                .title {
+
+                }
+                .price {
+    
+                }
+            }
+        }
+    }
+}
